kubernetes/wordpress/pod-mysql.yaml
kind: Pod
apiVersion: v1
metadata:
  name: mysql
  namespace: wordpress
  labels:
    app: mysql-wordpress
spec:
  volumes:
    - name: mysql
      persistentVolumeClaim:
       claimName: claim-mysql
  containers:
    - name: mysql
      image: mysql:5.6
      ports:
        - containerPort: 3306
          name: "mysql-server"
      volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: mysql
