kubernetes/wordpress/svc-mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-server
  namespace: wordpress
spec:
  ports:
  - name: mysql
    targetPort: 3306
    port: 3306
  selector:
    app: mysql-wordpress
