kubernetes/wordpress/svc-nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: wordpress
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: wordpress
